<resources>
    <string name="app_name">有物</string>
    <string name="text_login_description">这是一段描述性文字</string>
    <string name="text_register">注册</string>
    <string name="text_setting">设置</string>
    <string name="text_login">登录</string>
    <string name="text_submit">提交</string>
    <string name="text_logout">退出登录</string>
    <string name="text_phone">手机</string>
    <string name="text_email">邮箱</string>
    <string name="text_get_vercode">获取验证码</string>
    <string name="text_button_cancle">取消</string>
    <string name="text_button_complete">完成</string>
    <string name="text_setting_complete">完成设置</string>
    <string name="text_button_sure">确定</string>
    <string name="text_register_read">点击完成表示您已经阅读并同意</string>
    <string name="text_register_terms">使用条款</string>
    <string name="text_register_and">与</string>
    <string name="text_register_agreements">隐私协议</string>
    <string name="text_user_password_forget">忘记密码</string>
    <string name="text_user_login_others">使用以下方式登录</string>
    <string name="text_tab_list">列表</string>
    <string name="text_tab_map">地图</string>
    <string name="text_tab_events">事件</string>
    <string name="text_logo">LOGO</string>
    <string name="text_click_to_edit_user">点击编辑头像及昵称</string>
    <string name="text_setting_myfriends">我的好友</string>
    <string name="text_setting_myfriends_add">添加好友</string>
    <string name="text_setting_ignore">勿扰设置</string>
    <string name="text_setting_ignore_area">勿扰区域</string>
    <string name="text_setting_ignore_area_point">位置勿扰区域</string>
    <string name="text_setting_ignore_area_wifi">WIFI勿扰区域</string>
    <string name="text_setting_ignore_area_add">添加勿扰区域</string>
    <string name="text_setting_ignore_point_add">添加位置勿扰区域</string>
    <string name="text_setting_ignore_wifi_add">添加WIFI勿扰区域</string>
    <string name="text_setting_ignore_time_add">添加勿扰时段</string>
    <string name="text_setting_ignore_time">休眠时段</string>
    <string name="text_setting_service">服务设置</string>
    <string name="text_setting_star">勋章与积分</string>
    <string name="text_setting_shop">官方商店</string>
    <string name="text_setting_readme">使用说明</string>
    <string name="text_setting_help">帮助中心</string>
    <string name="text_user_header_image">头像</string>
    <string name="text_user_name_empty">未填写</string>
    <string name="text_user_nike">昵称</string>
    <string name="text_password_edit">修改密码</string>
    <string name="text_phone_num">手机号</string>
    <string name="text_wechat">微信</string>
    <string name="text_qq">QQ</string>
    <string name="text_user_location">我的位置</string>
    <string name="text_edit">修改</string>
    <string name="text_unbind">未绑定</string>
    <string name="text_bind_phone">绑定手机号</string>
    <string name="text_bind_email">绑定邮箱</string>
    <string name="text_email_resend_to_verify">重新发送验证邮件</string>
    <string name="text_friend_applying">申请中</string>
    <string name="text_friend_refuse">已拒绝</string>
    <string name="text_friend_aready_add">已添加</string>
    <string name="text_friend_be_invitation">被邀请</string>
    <string name="text_bluetooth">蓝牙</string>
    <string name="text_bluetooth_open_tip">开启后，只能贴片才能与你的手机连接</string>
    <string name="text_location_service">定位服务</string>
    <string name="text_location_open_tip">开启后，当你忘带东西时，贴片才能帮你记录位置</string>
    <string name="text_notification">通知</string>
    <string name="text_notification_open_tip">开启后麦当您忘带东西时，贴片才能提醒你</string>
    <string name="text_background_application_refresh">后台应用刷新</string>
    <string name="text_background_application_open_tip">开启后，智能贴片app才能与贴片保持连接</string>
    <string name="text_function_of_normal_user">需要开启以上功能，贴片才能正常工作</string>
    <string name="text_device_current_unbind">当前尚未绑定贴片</string>

    <string name="tip_input_phone">请输入手机号</string>
    <string name="tip_input_vercode">请输入验证码</string>
    <string name="tip_input_user_nike">请输入昵称</string>
    <string name="tip_input_password">请输入密码</string>
    <string name="tip_input_password_old">请输原始密码</string>
    <string name="tip_input_password_new">请输新密码</string>
    <string name="tip_input_email">请输入邮箱</string>
    <string name="tip_msg_dialog_logout">退出登录后所有的防丢器将会断开连接，再次登录前将无法管理，是否确认退出？</string>
    <string name="tip_msg_email_unverified">邮箱未验证，请登录邮箱查收邮件进行验证</string>
    <string name="tip_msg_ignore_area_desc">勿扰区域内，会关闭所有的防丢提醒</string>
    <string name="tip_msg_ignore_time_desc">休眠时段内，会关闭所有的防丢提醒</string>
    <string name="tip_ver_phone_faild">手机号为空或格式不正确！</string>
    <string name="tip_ver_email_faild">邮箱为空或格式不正确！</string>
    <string name="tip_ver_code_empty">短信验证码不能为空！</string>
    <string name="tip_ver_password_empty">密码不能为空！</string>
    <string name="tip_ver_user_nike_empty">用户昵称不能为空！</string>


    <string name="msg_upload_file_success">上传成功！</string>
    <string name="msg_regist_successful">注册成功！</string>
    <string name="msg_edit_successful">修改成功！</string>
    <string name="msg_user_login_successful">登录成功！</string>
    <string name="msg_user_not_exist">用户不存在！</string>
    <string name="msg_user_invalid_password">密码错误！</string>
    <string name="msg_device_bind_success">绑定成功！</string>
    <string name="msg_account_already_bind">改号码已被其他账号绑定！</string>
    <string name="msg_server_error">服务器错误，请稍后再试！</string>
    <string name="msg_net_error">网络异常，请稍后再试！</string>
    <string name="msg_net_unavailable">当前网络不可用，请链接网络后重试！</string>
    <string name="msg_data_parse_error">数据解析异常，请稍后再试！</string>
    <string name="msg_server_connect_error">服务器连接失败，请稍后再试！</string>
    <string name="msg_ssl_error">证书验证失败，请通知管理员解决！</string>
    <string name="msg_unknown_error">未知错误，请稍后再试！</string>
    <string name="msg_friend_add_apply">申请已发送给好友，请等待好友审核！</string>
</resources>
