<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.miittech.you.weight.Titlebar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <TextView
            android:id="@+id/tv_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_bluetooth"
            android:textColor="@color/black"
            android:textSize="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_bluetooth"
            android:text="@string/text_bluetooth_open_tip"
            android:layout_marginTop="2dp"
            android:textSize="12dp"/>

        <CheckBox
            android:id="@+id/check_bluetooth"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:button="@null"
            android:background="@drawable/sl_switch"
            android:checked="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/bg_setting_lines"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <TextView
            android:id="@+id/tv_location_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_location_service"
            android:textColor="@color/black"
            android:paddingBottom="2dp"
            android:textSize="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_location_service"
            android:text="@string/text_location_open_tip"
            android:textSize="12dp"/>

        <CheckBox
            android:id="@+id/check_lcoation"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:button="@null"
            android:background="@drawable/sl_switch"
            android:checked="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/bg_setting_lines"/>
    <RelativeLayout
        android:id="@+id/rl_check_notification"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <TextView
            android:id="@+id/tv_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_notification"
            android:textColor="@color/black"
            android:paddingBottom="2dp"
            android:textSize="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_notification"
            android:text="@string/text_notification_open_tip"
            android:textSize="12dp"/>

        <CheckBox
            android:id="@+id/check_notification"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:button="@null"
            android:background="@drawable/sl_switch"
            android:checked="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/bg_setting_lines"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <TextView
            android:id="@+id/tv_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_background_application_refresh"
            android:textColor="@color/black"
            android:textSize="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_background"
            android:text="@string/text_background_application_open_tip"
            android:layout_marginTop="2dp"
            android:textSize="12dp"/>

        <CheckBox
            android:id="@+id/check_background"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:button="@null"
            android:background="@drawable/sl_switch"
            android:checked="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/bg_setting_lines"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_function_of_normal_user"
            android:layout_above="@+id/btn_ok"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:textSize="16dp"
            android:layout_marginBottom="10dp"/>
        <RelativeLayout
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:visibility="gone">
            <ImageView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_button_sure"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_complete"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"/>
            </RelativeLayout>
    </RelativeLayout>
</LinearLayout>