<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shap_fillet_white"
        android:orientation="vertical">
        <TextView
            android:id="@+id/btn_ignore_point_add"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/text_setting_ignore_point_add"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/text_color_cancel"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_lines"/>
        <TextView
            android:id="@+id/btn_ignore_wifi_add"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/text_setting_ignore_wifi_add"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/text_color_cancel"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/shap_fillet_white"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <TextView
            android:id="@+id/btn_button_cancle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_cancle"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/text_color_cancel"/>
    </LinearLayout>
</LinearLayout>