<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <com.miittech.you.weight.Titlebar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/ll_edit_uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_user_nike"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/tip_input_user_nike"
            android:textColorHint="@color/input_hint"
            android:textSize="18dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_setting_lines"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_edit_upassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_user_password_old"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/tip_input_password_old"
            android:textColorHint="@color/input_hint"
            android:textSize="18dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_setting_lines"/>
        <EditText
            android:id="@+id/et_user_password_new"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/tip_input_password_new"
            android:textColorHint="@color/input_hint"
            android:textSize="18dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_setting_lines"/>
    </LinearLayout>
</LinearLayout>