<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="181dp"
        android:background="@drawable/shap_fillet_white"
        android:orientation="vertical">
        <TextView
            android:id="@+id/msg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="22dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:lines="1"
            android:text="通知服务已关闭"/>
        <TextView
            android:id="@+id/msg_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_msg_dialog_logout"
            android:layout_below="@+id/msg_title"
            android:minHeight="100dp"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="18dp"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_gravity="bottom"
            android:layout_below="@+id/msg_info"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/bg_lines"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:orientation="horizontal">
                <TextView
                    android:id="@+id/btn_button_cancle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_button_cancle"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textColor="@color/text_color_cancel"/>
                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_lines"/>
                <TextView
                    android:id="@+id/btn_button_sure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_sure"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textColor="@color/text_color_cancel"/>
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>