<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.miittech.you.weight.Titlebar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.miittech.you.weight.TypeSelector
        android:id="@+id/typeSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/bg_lines"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btn_ok">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_setting_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_bluetooth"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <CheckBox
                        android:id="@+id/check_setting_ignore"
                        android:layout_width="53dp"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/sl_switch"
                        android:button="@null"
                        android:checked="true" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_setting_ignore_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_bluetooth"
                    android:text="@string/text_bluetooth_open_tip"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tv_setting_ignore_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_bluetooth"
                    android:text="@string/text_setting_ignore_area_point"
                    android:textSize="12dp" />

                <LinearLayout
                    android:id="@+id/ll_ignore_areas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_setting_ignore_ssid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_bluetooth"
                    android:text="@string/text_setting_ignore_area_wifi"
                    android:textSize="12dp" />

                <LinearLayout
                    android:id="@+id/ll_ignore_ssids"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_ignore_times"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants">

            <ImageView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:clickable="false"
                android:focusable="false"
                android:scaleType="fitCenter"
                android:src="@drawable/bg_button_sure" />

            <TextView
                android:id="@+id/btn_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/text_login"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>