<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.miittech.you.activity.user.BindEmailActivity">
    <com.miittech.you.weight.Titlebar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/ll_tab_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="28dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/bg_input"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"/>
            <ImageView
                android:id="@+id/img_email"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_email"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"/>
            <EditText
                android:id="@+id/et_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/img_email"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@null"
                android:hint="@string/tip_input_email"
                android:textColorHint="@color/input_hint"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:lines="1"
                android:inputType="textEmailAddress"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:visibility="gone"
            android:text="@string/tip_msg_email_unverified"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_button_sure"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <TextView
            android:id="@+id/btn_ok_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_submit"
            android:textSize="22dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"/>
    </RelativeLayout>
</LinearLayout>
