<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    tools:context="com.miittech.you.activity.user.LoginRegisteActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"

        android:src="@drawable/bg_login_register"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_login_register_hr"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login_description"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <ImageView
        android:id="@+id/btn_play"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="94dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_play" />

    <RelativeLayout
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_border_white"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:layout_centerInParent="true"
            android:textSize="22dp"
            android:textColor="@color/black"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_border_white_tran"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:layout_centerInParent="true"
            android:textSize="22dp"
            android:textColor="@color/white"/>
    </RelativeLayout>
</RelativeLayout>
